--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Recap</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="index.js" defer></script>
+    <!-- <script src="index.js" defer></script>
+    <script src="index2.js" defer></script> -->
+    <script src="asyncAwait.js" defer></script>
 </head>
 <body>
     <header>
